apps/hermes-agent/gateway/components/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata
spec:
  defaultBackend:
    service:
      name: hermes-agent-gateway
      port:
        name: http
  tls:
    - hosts:
        - automata
